--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hopify</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <title><%= full_title yield :title %></title>
+    <%= favicon_link_tag 'apple-touch-icon.png', rel: 'apple-touch-icon', size: "180x180" %>
+    <%= favicon_link_tag 'favicon-32x32.png', rel: 'icon', type: 'image/png', size: "32x32" %>
+    <%= favicon_link_tag 'favicon-16x16.png', rel: 'icon', type: 'image/png', size: "16x16" %>
+    <meta charset="utf-8">
+    <%= render 'layouts/rails_default' %>
+    <%= render 'layouts/shim' %>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap">
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
+    <%= render 'layouts/header' %>
+    <div class="container">
+        <% flash.each do |message_type, message| %>
+          <div class="alert alert-<%= message_type %>">
+            <%= message %>
+          </div>
+        <% end %>
+    </div>
     <%= yield %>
+    <%= render 'layouts/footer' %>
+    <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
