Finish user sign up

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= render 'layouts/rails_default' %>
     <%= render 'layouts/shim' %>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Marck+Script">
     <%= javascript_importmap_tags %>
   </head>
 
