--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,18 +1,66 @@
-<%= form_with model: @user do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name, class: "form-control" %>
-  
-  <%= f.label :email %>
-  <%= f.email_field :email, class: "form-control" %>
-  
-  <%= f.label :phone %>
-  <%= f.phone_field :phone, class: "form-control" %>
+<div class="row d-flex justify-content-center align-items-center h-100">
+  <div class="col-lg-12 col-xl-11">
+    <div class="card-body p-md-5">
+      <div class="row justify-content-center">
+        <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-  <%= f.label :password %>
-  <%= f.password_field :password, class: "form-control" %>
-  
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation, class: "form-control" %>
+          <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
+          <%= form_with(model: @user, class:"mx-1 mx-md-4" ) do |f| %>
+            <%= render 'shared/error_messages', object: f.object %>
+            <div class="d-flex flex-row align-items-center mb-4">
+              <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+              <div class="form-outline flex-fill mb-0">
+                <%= f.label :name, class: "form-label" %>
+                <%= f.text_field :name, class: "form-control" %>
+              </div>
+            </div>
 
-  <%= f.submit yield(:button_text), class: "btn btn-primary" %>
-<% end %>
+            <div class="d-flex flex-row align-items-center mb-4">
+              <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+              <div class="form-outline flex-fill mb-0">
+                <%= f.label :email, class: "form-label" %>
+                <%= f.email_field :email, class: "form-control" %>
+              </div>
+            </div>
+            <div class="d-flex flex-row align-items-center mb-4">
+              <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+              <div class="form-outline flex-fill mb-0">
+                <%= f.label :address, class: "form-label" %>
+                <%= f.text_field :address, class: "form-control" %>
+              </div>
+            </div>
+            <div class="d-flex flex-row align-items-center mb-4">
+              <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+              <div class="form-outline flex-fill mb-0">
+                <%= f.label :phone_number, class: "form-label" %>
+                <%= f.phone_field :phone_number, class: "form-control" %>
+              </div>
+            </div>
+            <div class="d-flex flex-row align-items-center mb-4">
+              <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+              <div class="form-outline flex-fill mb-0">
+                <%= f.label :password, class: "form-label" %>
+                <%= f.password_field :password, class: "form-control" %>
+              </div>
+            </div>
+            <div class="d-flex flex-row align-items-center mb-4">
+              <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+              <div class="form-outline flex-fill mb-0">
+                <%= f.label :password_confirmation, class: "form-label" %>
+                <%= f.password_field :password_confirmation, class: "form-control" %>
+              </div>
+            </div>
+            <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+              <%= f.submit yield(:button_text), class: "btn btn-primary btn-lg" %>
+            </div>
+          <% end %>
+        </div>
+        <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+
+          <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
+            class="img-fluid" alt="Signup image">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
