--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,3 @@
-<% provide :title, "Sign up" %>
-<% provide :button_text, "Create an account" %>
-<h1>Sign up</h1>
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= render 'form' %>
-  </div>
-</div>
+<% provide :title, "Sign Up" %>
+<% provide :button_text, "Create account" %>
+<%= render 'form' %>
