--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -59,13 +59,29 @@
                 </a>
                 <a class="nav-icon position-relative text-decoration-none" href="#">
                     <i class="fa fa-fw fa-cart-arrow-down text-dark mr-1"></i>
-                    <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">7</span>
                 </a>
-                <a class="nav-icon position-relative text-decoration-none" href="#">
-                </a>
-                <%= link_to(signup_path, class:"nav-icon position-relative text-decoration-none") do %>
-                    <i class="fa fa-fw fa-user text-dark mr-3"></i>
-                    <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">+99</span>
+                <% if logged_in? %>
+                    <!-- Example single danger button -->
+                    <div class="btn-group">
+                        <%# <button type="button" class="btn btn-success dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        </button> %>
+                        <div class="nav-icon position-relative text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">
+                            <i class="fa-solid fa-circle-user"></i>
+                        </div>
+                        <div class="dropdown-menu">
+                            <%= link_to "Profile", current_user, class:"dropdown-item" %>
+                            <%= link_to "Orders", '#', class:"dropdown-item" %>
+                            <%= link_to "Wish list", '#', class:"dropdown-item" %>
+                            <%= link_to "My shops", '#', class:"dropdown-item" %>
+                            <%= link_to "Settings", '#', class:"dropdown-item" %>
+                            <div class="dropdown-divider"></div>
+                            <%= link_to "Log out", logout_path, data: { "turbo-method": :delete }, class:"dropdown-item" %>
+                        </div>
+                    </div>
+                <% else %>
+                    <%= link_to(login_path, class:"nav-icon position-relative text-decoration-none") do %>
+                        <i class="fa-solid fa-user-plus"></i>
+                    <% end %>
                 <% end %>
             </div>
         </div>
