--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -56,9 +56,7 @@
           <% end %>
         </div>
         <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
-
-          <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
-            class="img-fluid" alt="Signup image">
+          <%= image_tag "signup.svg", class:"img-fluid", alt: "Signup image"%>
         </div>
       </div>
     </div>
