--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -38,7 +38,7 @@
                         <%= link_to "Help", help_path, class: "nav-link" %>
                     </li>
                     <li class="nav-item">
-                        <%= link_to "Shops", '#', class: "nav-link" %>
+                        <%= link_to "Shops", shops_path, class: "nav-link" %>
                     </li>
                     <li class="nav-item">
                         <%= link_to "Contact", contact_path, class: "nav-link" %>
@@ -75,7 +75,7 @@
                             <%= link_to "Profile", current_user, class:"dropdown-item" %>
                             <%= link_to "Orders", '#', class:"dropdown-item" %>
                             <%= link_to "Wish list", '#', class:"dropdown-item" %>
-                            <%= link_to "My shops", '#', class:"dropdown-item" %>
+                            <%= link_to "My shops", shops_path, class:"dropdown-item" %>
                             <%= link_to "Settings", edit_user_path(current_user), class:"dropdown-item" %>
                             <div class="dropdown-divider"></div>
                             <%= link_to "Log out", logout_path, data: { "turbo-method": :delete }, class:"dropdown-item" %>
