--- a/app/views/shops/new.html.erb
+++ b/app/views/shops/new.html.erb
@@ -1,2 +1,58 @@
-<h1>Shops#new</h1>
-<p>Find me in app/views/shops/new.html.erb</p>
+<% provide :title, "Create shop" %>
+<div class="row d-flex justify-content-center align-items-center h-100">
+  <div class="col-lg-12 col-xl-11">
+    <div class="card-body p-md-5">
+      <div class="row justify-content-center">
+        <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
+
+          <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Build your shop</p>
+          <%= form_with(model: @shop, class:"mx-1 mx-md-4" ) do |f| %>
+            <%= render 'shared/error_messages', object: f.object %>
+            <div class="d-flex flex-row align-items-center mb-4">
+              <i class="fas fa-shop fa-lg me-3 fa-fw"></i>
+              <div class="form-outline flex-fill mb-0">
+                <%= f.label :name, class: "form-label" %>
+                <%= f.text_field :name, placeholder: "What is your shop called...?", class: "form-control" %>
+              </div>
+            </div>
+
+            <div class="d-flex flex-row align-items-center mb-4">
+              <i class="fas fa-comment fa-lg me-3 fa-fw"></i>
+              <div class="form-outline flex-fill mb-0">
+                <%= f.label :description, class: "form-label" %>
+                <%= f.text_area :description, placeholder: "a short description of your shop...", class: "form-control" %>
+              </div>
+            </div>
+            <div class="d-flex flex-row align-items-center mb-4">
+              <i class="fas fa-link fa-lg me-3 fa-fw"></i>
+              <div class="form-outline flex-fill mb-0">
+                <%= f.label :homesite, class: "form-label" %>
+                <%= f.text_field :homesite, placeholder: "Your shop's website if you have one...", class: "form-control" %>
+              </div>
+            </div>
+            <div class="d-flex flex-row align-items-center mb-4">
+              <i class="fas fa-phone fa-lg me-3 fa-fw"></i>
+              <div class="form-outline flex-fill mb-0">
+                <%= f.label :phone, class: "form-label" %>
+                <%= f.phone_field :phone, class: "form-control" %>
+              </div>
+            </div>
+            <div class="d-flex flex-row align-items-center mb-4">
+              <i class="fas fa-location-dot fa-lg me-3 fa-fw"></i>
+              <div class="form-outline flex-fill mb-0">
+                <%= f.label :address, class: "form-label" %>
+                <%= f.text_field :address, class: "form-control" %>
+              </div>
+            </div>
+            <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+              <%= f.submit "Create shop", class: "btn btn-primary btn-lg" %>
+            </div>
+          <% end %>
+        </div>
+        <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+          <%= image_tag "shop_creation.svg", class:"img-fluid", alt: "Signup image"%>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
