--- a/app/views/cart_items/index.html.erb
+++ b/app/views/cart_items/index.html.erb
@@ -15,6 +15,7 @@
                   <hr class="my-4">
               <% if @cart_items.any? %>
                 <% @cart_items.each do |i| %>
+
                   <% current_product_stock = ProductStock.find(i.product_stock_id) %>
                   <div class="row mb-4 d-flex justify-content-between align-items-center">
                     <div class="col-md-2 col-lg-2 col-xl-2">
@@ -58,8 +59,10 @@
 
                   <hr class="my-4">
                 <% end %>
+                <% cart_total = current_user.cart_session.total %>
               <% else %>
                 <h3>Think you might want to pick up some things first</h3>
+                <% cart_total = 0 %>
               <% end %>
                   <div class="pt-5">
                     <h6 class="mb-0"><a href="#!" class="text-body"><i
@@ -74,7 +77,7 @@
 
                   <div class="d-flex justify-content-between mb-4">
                     <h5 class="text-uppercase">Subtotal</h5>
-                    <h5><%= current_user.cart_session.total%></h5>
+                    <h5><%= cart_total %></h5>
                   </div>
 
                   <h5 class="text-uppercase mb-3">Shipping</h5>
@@ -100,11 +103,23 @@
 
                   <div class="d-flex justify-content-between mb-5">
                     <h5 class="text-uppercase">Total</h5>
-                    <h5><%= current_user.cart_session.total%></h5>
+                    <h5><%= cart_total %></h5>
                   </div>
-
-                  <button type="button" class="btn btn-success btn-block btn-lg"
-                    data-mdb-ripple-color="dark">Check out</button>
+                  <%= form_with model: @order, url: orders_url do |f| %>
+                    <% @cart_items.each do |ci| %>
+                      <%= hidden_field_tag "product_stock_ids[]", ci.product_stock_id %>
+                      <%= hidden_field_tag "quantity[]", ci.quantity %>
+                      <%= hidden_field_tag "shops[]", ci.shop_id %>
+                      <%= hidden_field_tag "subtotal[]", ci.total %>
+                    <% end %>
+                    <%= hidden_field_tag :total, cart_total %>
+                    <% if cart_total == 0 %>
+                      <button type="button" class="btn btn-success btn-block btn-lg"
+                      data-mdb-ripple-color="dark"disabled>Check out</button>
+                    <% else %>
+                      <%= f.submit "Check out", class:"btn btn-success btn-block btn-lg", data: {mdb_ripple_color: "dark"} %>
+                    <% end %>
+                  <% end %>   
 
                 </div>
               </div>
