--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -38,7 +38,7 @@
                         <%= link_to "Help", help_path, class: "nav-link" %>
                     </li>
                     <li class="nav-item">
-                        <%= link_to "Shops", shops_path, class: "nav-link" %>
+                        <%= link_to "Categories", categories_path, class: "nav-link" %>
                     </li>
                     <li class="nav-item">
                         <%= link_to "Contact", contact_path, class: "nav-link" %>
@@ -103,14 +103,7 @@
         <div class="w-100 pt-1 mb-5 text-right">
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <form action="" method="get" class="modal-content modal-body border-0 p-0">
-            <div class="input-group mb-2">
-                <input type="text" class="form-control" id="inputModalSearch" name="q" placeholder="Search ...">
-                <button type="submit" class="input-group-text bg-success text-light">
-                    <i class="fa fa-fw fa-search text-white"></i>
-                </button>
-            </div>
-        </form>
+        <%= render "search_form" %>
     </div>
 </div>
 <%# <div id="cart"> %>
