--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -1,6 +1,6 @@
 <% if !@shop.nil? %>
   <% provide :title, @shop.name %>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light static-top">
     <div class="container">
       <%= shop_avatar(@shop,"navbar-brand") %>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,7 +9,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#shop-about">About us</a>
+            <a class="nav-link" aria-current="page" href="#shop-about">About us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#shop-contact">Contact</a>
@@ -84,12 +84,6 @@
                             <li class="list-inline-item">
                                 <a class="h3 text-dark text-decoration-none mr-3" href="#">All</a>
                             </li>
-                            <li class="list-inline-item">
-                                <a class="h3 text-dark text-decoration-none mr-3" href="#">Men's</a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a class="h3 text-dark text-decoration-none" href="#">Women's</a>
-                            </li>
                         </ul>
                     </div>
                     <div class="col-md-6 pb-4">
@@ -117,22 +111,17 @@
                                                 <i class="far fa-eye"></i>
                                             <% end %>
                                         </li>
-                                        <li><a class="btn btn-success text-white mt-2" href="shop-single.html"><i class="fas fa-cart-plus"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="card-body">
                                 <%= link_to p.name, product_url(p.id), class:"h3 text-decoration-none" %>
-                                <ul class="w-100 list-unstyled d-flex justify-content-between mb-0">
-                                    <li>input size here</li>
-                                    <li class="pt-2">
-                                        <span class="product-color-dot color-dot-red float-left rounded-circle ml-1"></span>
-                                        <span class="product-color-dot color-dot-blue float-left rounded-circle ml-1"></span>
-                                        <span class="product-color-dot color-dot-black float-left rounded-circle ml-1"></span>
-                                        <span class="product-color-dot color-dot-light float-left rounded-circle ml-1"></span>
-                                        <span class="product-color-dot color-dot-green float-left rounded-circle ml-1"></span>
-                                    </li>
-                                </ul>
+                                <div class="d-flex justify-content-center">
+                                    <% size_arr = p.apparel_size_ids.uniq %>
+                                    <% size_arr.each do |s| %>
+                                        <span class="p-2"><%= ApparelSize.find(s).title %></span>
+                                    <% end %>
+                                </div>
                                 <ul class="list-unstyled d-flex justify-content-center mb-1">
                                     <li>
                                         <i class="text-warning fa fa-star"></i>
@@ -142,7 +131,7 @@
                                         <i class="text-muted fa fa-star"></i>
                                     </li>
                                 </ul>
-                                <p class="text-center mb-0">price &#8363;</p>
+                                <p class="text-center mb-0"><%= p.product_stocks[0].price %>$</p>
                             </div>
                         </div>
                     </div>
