--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -73,7 +73,7 @@
                             <%= link_to "Users", users_path, class: "dropdown-item" %>
                         <% end %>
                             <%= link_to "Profile", current_user, class:"dropdown-item" %>
-                            <%= link_to "Orders", '#', class:"dropdown-item" %>
+                            <%= link_to "Orders", orders_path, class:"dropdown-item" %>
                             <%= link_to "Wish list", '#', class:"dropdown-item" %>
                             <%= link_to "My shops", shops_path, class:"dropdown-item" %>
                             <div class="dropdown-divider"></div>
