--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -32,7 +32,7 @@
                                             <% a_of_primg.each do |pimg|%>
                                             <div class="col-4">
                                                 <%= link_to pimg.primg.url do %>
-                                                <%= image_tag pimg.primg.url(:eyecatch), class:"card-img img-fluid" %>
+                                                <%= image_tag pimg.primg.url(:eyecatch), class:"card-img img-fluid", id:"product-detail" %>
                                                 <% end %>
                                             </div>
                                             <% end %>
@@ -132,6 +132,7 @@
                                             <%# <button type="submit" class="btn btn-success btn-lg" name="submit" value="buy">Buy</button> %>
                                         </div>
                                         <div class="col d-grid">
+                                            <%= hidden_field_tag "product_id", @product.id %>
                                             <%= hidden_field_tag "product_quantity", "1" %>
                                             <%= hidden_field_tag "shop_id", @product.shop_id %>
                                             <%= f.submit "Add to cart", class:"btn btn-success btn-lg", data: { disable_with: "Added to cart" } %>
