--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -59,8 +59,11 @@
                 <h3>You do not have any orders recently. Try browsing our platform.</h3>
               <% end %>
                   <div class="pt-5">
-                    <h6 class="mb-0"><a href="#!" class="text-body"><i
-                          class="fas fa-long-arrow-alt-left me-2"></i>Back to shop</a></h6>
+                    <h6 class="mb-0">
+                    <%= link_to root_url, class:"text-body" do %>
+                      <i class="fas fa-long-arrow-alt-left me-2">Back to shop</i>
+                    <% end %>
+                    </h6>
                   </div>
                 </div>
               </div>
