--- a/app/views/shops/edit.html.erb
+++ b/app/views/shops/edit.html.erb
@@ -15,6 +15,8 @@
                     <!-- Profile picture upload button-->
                 </div>
             </div>
+        <%= link_to "View products", products_path(@shop.id), class:"btn btn-primary" %>
+        <%= link_to "View orders", mng_orders_path(@shop.id), class:"btn btn-primary" %>
         </div>
       <div class="col-xl-8">
           <!-- Account details card-->
@@ -62,5 +64,3 @@
   </div>
 </div>
 <%# <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" /> %>
-<%= link_to "View products", products_path(@shop.id) %>
-<%= link_to "View orders", mng_orders_path(@shop.id) %>
