--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -62,8 +62,18 @@
                 <a class="nav-icon d-none d-lg-inline" href="#" data-bs-toggle="modal" data-bs-target="#templatemo_search">
                     <i class="fa fa-fw fa-search text-dark mr-2"></i>
                 </a>
-                <%= link_to cart_items_path, class: "nav-icon position-relative text-decoration-none" do %>
+                <%= link_to '#', class: "nav-icon position-relative text-decoration-none dropdown-toggle", data: {bs_toggle: "dropdown"} do %>
                     <i class="fa fa-fw fa-cart-arrow-down text-dark mr-1"></i>
+                    <div class="dropdown-menu">
+                    <% if current_user %>
+                        <% if current_cart %>
+                            <h3 class="dropdown-item"><%= pluralize(current_cart.cart_items.size, "item") %> </h3>
+                            <h3 class="dropdown-item">Total: <%= current_cart.total %></h3>
+                        <% end %>
+                    <% end %>
+                        <div class="dropdown-divider"></div>
+                        <%= link_to "Shopping cart", cart_items_path, class:"dropdown-item" %>
+                    </div>
                 <% end %>
                     <div class="btn-group">
                         <%# <button type="button" class="btn btn-success dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
