--- a/app/views/static_pages/_products_home.html.erb
+++ b/app/views/static_pages/_products_home.html.erb
@@ -2,6 +2,7 @@
 <%# binding.pry %>
 <div class="row">
 <% @products.each do |p| %>
+<% @product_images =  p.product_images %>
     <div class="col-12 col-md-4 mb-4">
         <div class="card h-100">
         <%#= image_tag Product.first.product_images[0].primg.url(:eyecatch) %>
@@ -9,7 +10,7 @@
         <% unless @product_images.any? %>
             <img class="card-img rounded-0 img-fluid" src="https://source.unsplash.com/600x600/?<%= r %>">
         <% else %>
-            <%= image_tag p.product_images[0].primg.url(:eyecatch) %>
+            <%= image_tag @product_images[0].primg.url(:eyecatch) %>
         <% end %>
             <div class="card-body">
                 <ul class="list-unstyled d-flex justify-content-between">
